--- a/src/app/components/seed/seed.component.html
+++ b/src/app/components/seed/seed.component.html
@@ -90,7 +90,8 @@
 
           <div class="uk-width-expand">
             <h4 class="uk-comment-title uk-margin-remove">
-              <a class="uk-link-reset">Author</a>
+              <a *ngIf="comment.author" class="uk-link-reset">{{comment.author}}</a>
+              <a *ngIf="!comment.author" class="uk-link-reset">Anonimo</a>
             </h4>
             <ul class="uk-comment-meta uk-subnav uk-subnav-divider uk-margin-remove-top">
               <li>
