--- a/src/app/components/foro/foro.component.html
+++ b/src/app/components/foro/foro.component.html
@@ -1,65 +1,11 @@
 <div style="position: absolute; top: 0; width: 100%; min-height: 100vh; overflow-x: hidden; background-color: whitesmoke">
 
-  <div class="uk-offcanvas-content" style="position: relative;">
-
-    <a class="uk-button" type="button" uk-toggle="target: #offcanvas-nav-primary-foro" style="text-decoration: none;">
-      <i id="menu_icon" class="icon ion-md-menu" style="font-size: 55px;"></i>
-    </a>
-
-    <!--
-    <div style="position: absolute; top: 1em; right: 2em; max-height: 200px; height: 200;; width: 300px;" uk-grid>
-
-      <div class="uk-width-1-4@m" style="text-align: left;">
-      </div>
-      <div class="uk-width-1-2@m">
-        <img *ngIf="mujer" class="uk-comment-avatar" src="https://image.ibb.co/csnFUJ/woman.png" width="60" height="60" alt="">
-        <img *ngIf="!mujer" class="uk-comment-avatar" src="https://image.ibb.co/cFgpOd/boy.png" width="60" height="60" alt="">
-      </div>
-      <div class="uk-width-expand@m" style="text-align: left;">
-      </div>
-
-    </div>
--->
-
-
-    <div id="offcanvas-nav-primary-foro" uk-offcanvas="mode: push; overlay: true">
-      <div class="uk-offcanvas-bar uk-flex uk-flex-column" style="height: 100vh; width: 100%;">
-
-        <ul class="uk-nav uk-nav-primary uk-nav-center uk-margin-auto-vertical">
-          <li class="uk-nav-header">MENU</li>
-          <li routerLink="/home" uk-toggle="target: #offcanvas-nav-primary-foro">
-            <a>Inicio</a>
-          </li>
-          <li routerLink="/portafolio" uk-toggle="target: #offcanvas-nav-primary-foro">
-            <a>Portafolio de Servicios</a>
-          </li>
-          <li routerLink="/asociados" href="#asociados" uk-toggle="target: #offcanvas-nav-primary-foro">
-            <a>Asociados</a>
-          </li>
-
-          <li routerLink="/social" uk-toggle="target: #offcanvas-nav-primary-foro">
-            <a>Social</a>
-          </li>
-          <li routerLink="/foro" href="#" uk-toggle="target: #offcanvas-nav-primary-foro">
-            <a>Foro</a>
-          </li>
-
-          <li routerLink="/contacto" href="#" uk-toggle="target: #offcanvas-nav-primary-foro">
-            <a>Contacto</a>
-          </li>
-        </ul>
-
-        <a class="uk-button" type="button" uk-toggle="target: #offcanvas-nav-primary-foro" style="text-decoration: none;">
-          <i class="icon ion-md-close" style="font-size: 55px; color: whitesmoke;"></i>
-        </a>
-
-      </div>
-    </div>
 
 
 
-
-
+    <a class="uk-button uk-margin-top" type="button" uk-toggle="target: #offcanvas-nav-primary" style="text-decoration: none; position: fixed; z-index: 100;">
+        <i id="menu_icon" class="icon ion-md-menu" style="font-size: 65px;"></i>
+      </a>
 
 
 
@@ -330,11 +276,5 @@
 
 
 
-
-
-
-
-
-  </div>
 
 </div>
