--- a/src/app/components/portafolio/capacitacion/capacitacion.component.html
+++ b/src/app/components/portafolio/capacitacion/capacitacion.component.html
@@ -360,7 +360,7 @@
                         <div class="uk-accordion-content">
                           <ul class="uk-list uk-list-bullet">
                             <li>
-                              <p>Impuesto sobre la renta y complementarios. Impuesto sobre la renta para la equidad - CREE.
+                              <p>Impuesto sobre la renta y complementarios.
                                 Impuesto sobre las ventas – IVA. Retención en la fuente. Procedimiento tributario. Precios
                                 de transferencia. </p>
                             </li>
