--- a/src/app/components/social/social.component.html
+++ b/src/app/components/social/social.component.html
@@ -1,47 +1,10 @@
 <div style="position: absolute; top: 0; width: 100%; min-height: 100vh; overflow-x: hidden; background-color: whitesmoke">
 
-  <div class="uk-offcanvas-content">
-    <a class="uk-button" type="button" uk-toggle="target: #offcanvas-nav-primary-social" style="text-decoration: none;">
-      <i id="menu_icon" class="icon ion-md-menu" style="font-size: 55px;"></i>
-    </a>
 
-
-    <div id="offcanvas-nav-primary-social" uk-offcanvas="mode: push; overlay: true">
-      <div class="uk-offcanvas-bar uk-flex uk-flex-column" style="height: 100vh; width: 100%;">
-
-        <ul class="uk-nav uk-nav-primary uk-nav-center uk-margin-auto-vertical">
-          <li class="uk-nav-header">MENU</li>
-          <li routerLink="/home" uk-toggle="target: #offcanvas-nav-primary-social">
-            <a>Inicio</a>
-          </li>
-          <li routerLink="/portafolio" uk-toggle="target: #offcanvas-nav-primary-social">
-            <a>Portafolio de Servicios</a>
-          </li>
-          <li routerLink="/asociados" href="#asociados" uk-toggle="target: #offcanvas-nav-primary-social">
-            <a>Asociados</a>
-          </li>
-
-          <li routerLink="/social" uk-toggle="target: #offcanvas-nav-primary-social">
-            <a>Social</a>
-          </li>
-          <li routerLink="/foro" href="#" uk-toggle="target: #offcanvas-nav-primary-social">
-            <a>Foro</a>
-          </li>
-
-          <li routerLink="/contacto" href="#" uk-toggle="target: #offcanvas-nav-primary-social">
-            <a>Contacto</a>
-          </li>
-        </ul>
-
-        <a class="uk-button" type="button" uk-toggle="target: #offcanvas-nav-primary-social" style="text-decoration: none;">
-          <i class="icon ion-md-close" style="font-size: 55px; color: whitesmoke;"></i>
-        </a>
-
-      </div>
-    </div>
-
-
-
+    <a class="uk-button uk-margin-top" type="button" uk-toggle="target: #offcanvas-nav-primary" style="text-decoration: none; position: fixed; z-index: 100;">
+        <i id="menu_icon" class="icon ion-md-menu" style="font-size: 65px;"></i>
+      </a>
+    
 
 
 
@@ -110,49 +73,6 @@
     </div>
 
 
-
-
-
-
-
-    <div *ngIf="auth.author | async; then authenticated else guest">
-      
-    </div>
-
-      <ng-template #authenticated>
-        <div *ngIf="auth.author | async as author" class="uk-text-middle" style="float: right; min-width: 350px; margin-top: 2em;">
-
-            <div class="uk-grid-small uk-text-middle" uk-grid>
-              
-                <div class="uk-width-expand@s uk-text-middle uk-margin-top">
-                    <p>{{author.displayName}}</p>
-                </div>
-
-                <div class="uk-width-1-2@s uk-text-middle">
-                    <img class="uk-comment-avatar" src="{{author.photoURL}}" width="60" height="auto" alt="">
-                </div>
-
-              </div>
-
-              <button (click)="auth.logout()" class="uk-button uk-button-text" style="margin-top: -1em;">Salir</button>
-
-        </div> 
-      </ng-template>
-
-
-
-
-      <ng-template #guest>
-          <div class="uk-text-middle" style="float: right; min-width: 350px; margin-top: 2em;">
-              <div class="uk-margin">
-                  <a (click)="auth.google_login(); intenta_votar = false;" style="text-decoration: none">
-                    <h1 style=" font-family: 'Roboto'; font-size: 18px; font-weight: 300; color: rgb(167, 167, 167);">
-                      <i class="icon ion-logo-googleplus" style="font-size: 30px;"></i> &nbsp; Inicia sesión
-                    </h1>
-                  </a>
-                </div>
-          </div>
-      </ng-template>
 
 
 
@@ -337,8 +257,5 @@
 
 
 
-
-
-  </div>
 
 </div>
