multiple images support

--- a/src/app/components/publicacion/publicacion.component.html
+++ b/src/app/components/publicacion/publicacion.component.html
@@ -1,4 +1,4 @@
-<div style="position: absolute; top: 0; width: 100%; min-height: 100vh; overflow-x: hidden; background-color: whitesmoke">
+<div style="position: absolute; top: 0; width: 100%; min-height: 100vh; overflow-x: hidden; background-color: whitesmoke; z-index: 200;">
 
   <a class="uk-button" type="button" style="text-decoration: none;" routerLink="/foro">
     <i id="menu_icon" class="icon ion-ios-arrow-back" style="font-size: 55px;"></i>
