--- a/src/app/components/seed/seed.component.html
+++ b/src/app/components/seed/seed.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: whitesmoke; position: absolute; top: 0; right: 0; width: 100%; min-height: 100vh;">
+<div style="background-color: whitesmoke; position: absolute; top: 0; right: 0; width: 100%; min-height: 100vh; z-index: 200">
 
 
   <a class="uk-button" type="button" style="text-decoration: none;" (click)="go_back()">
