--- a/src/app/components/social/social.component.html
+++ b/src/app/components/social/social.component.html
@@ -207,7 +207,7 @@
 
                       <ul class="uk-slideshow-items">
                         <li *ngFor="let im of seed.photoURL">
-                          <img data-src="{{im | urlpipe | async}}" width="1800" height="1200" alt="" uk-cover uk-img="target: !ul > :last-child, !* +*">
+                          <img data-src="{{im | urlpipe | async}}" width="100%" height="auto" alt="" uk-cover uk-img="target: !ul > :last-child, !* +*">
                         </li>
 
                       </ul>
