--- a/src/app/components/social/social.component.html
+++ b/src/app/components/social/social.component.html
@@ -110,7 +110,7 @@
 
 
 
-        <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Social</h1>
+        <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Blog</h1>
 
         <div *ngIf="auth.author | async">
           <a style="text-decoration: none;" href="#modal-full" uk-toggle (click)="posteado = false">
