--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -101,7 +101,7 @@
       <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Asociados</h1>
       <div class="uk-margin-auto-vertical">
         <div id="asociadp_1"></div>
-        <p>Carlos Humberto Garcia Orrego</p>
+        <p class="uk-button uk-button-text" routerLink="/asociados" >Carlos Humberto Garcia Orrego</p>
         <hr style="width: 250px;" />
         <p>
           <i class="icon ion-ios-call"></i>&nbsp;&nbsp;&nbsp;(+57) 313 893-5855 </p>
