--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="uk-offcanvas-content" id="home_base">
+<div class="uk-offcanvas-content">
 
 
 
@@ -99,11 +99,16 @@
         <li routerLink="/contacto" href="#" uk-toggle="target: #offcanvas-nav-primary">
           <a>Contacto</a>
         </li>
+
+        <li id="close-menu-x">
+          <a class="uk-button" type="button" uk-toggle="target: #offcanvas-nav-primary" style="text-decoration: none;">
+            <i class="icon ion-md-close" style="font-size: 55px; color: whitesmoke;"></i>
+          </a>
+        </li>
+
       </ul>
 
-      <a class="uk-button" type="button" uk-toggle="target: #offcanvas-nav-primary" style="text-decoration: none;">
-        <i class="icon ion-md-close" style="font-size: 55px; color: whitesmoke;"></i>
-      </a>
+      
 
     </div>
   </div>
