--- a/src/app/components/portafolio/contacto/contacto.component.html
+++ b/src/app/components/portafolio/contacto/contacto.component.html
@@ -15,26 +15,28 @@
 
 <div uk-grid>
   <div class="uk-width-1-4@m"></div>
-  <div class="uk-width-expand@m" style="background-color: white; border-radius: 3em 3em 0 0;">
+  <div class="uk-width-expand@m" id="contact-page">
     <div style="padding: 3em;">
-      <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Contacto</h1>
+      <h1 class="portafolio-title">Contacto</h1>
 
       <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">dirección</h1>
-      <p style="font-size: 30px">
+      <p class="contact-items">
         Carrera 54D Número 135- 06
-        <br/> Torres Aqua Oficina 1004
+        <br/> Torres Acqua Oficina 1004
         <br/> Bogotá D.C.
       </p>
 
       <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">celular</h1>
-      <p style="font-size: 30px">
+      <p class="contact-items">
         (+57) 313 893-5855
       </p>
 
       <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">correo</h1>
-      <p style="font-size: 30px">
-        carloshgarciaorr@hotmail.com
-      </p>
+      <div id="correo-home">
+        <p class="contact-items">
+          carloshgarciaorr@hotmail.com
+        </p>
+      </div>
 
       <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">siguenos</h1>
       <a href="https://www.instagram.com/g_lsas/" style="text-decoration: none; color: black;">
