--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,8 +18,8 @@
 
 <div uk-grid>
   <div class="uk-width-1-6@m" style="background-color: white;"></div>
-  <div class="uk-width-1-3@m" style="background-color: white; border-radius: 0 3em 3em 0">
-    <div style="padding: 5em 2.5em 5em 0em;">
+  <div class="uk-width-1-3@m" id="vision-parent">
+    <div id="vision">
       <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Visión</h1>
       <p>
         Consolidarnos en el 2020 como una empresa referente en el mercado en los servicios que presta, que aplica los sistemas de
@@ -43,8 +43,8 @@
 
 <div uk-grid>
   <div class="uk-width-1-6@m"></div>
-  <div class="uk-width-expand@m" style="background-color: white; border-radius: 3em">
-    <div style="padding: 3em;">
+  <div class="uk-width-expand@m" id="mision-parent">
+    <div id="mision">
       <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Misión</h1>
       <p>
         Somos una empresa experta en servicios legales, de formación y capacitación, dedicada a proveer soluciones ajustadas a las
@@ -52,30 +52,31 @@
         lo cual permite el logro de los objetivos de nuestros clientes. Nuestros servicios se enfocan a la prestación de
         servicios profesionales o de consultoría en asesoría legal en el campo del derecho público y privado, así como en
         el ejercicio de la representación legal y/o la defensa jurídica de personas naturales o jurídicas, nacionales o extranjeras
-        ante las autoridades judiciales o administrativas a nivel nacional o internacional. 
+        ante las autoridades judiciales o administrativas a nivel nacional o internacional.
       </p>
 
-        <p [style.display]="!readmore ? 'none' : 'block'">
-            Igualmente, prestamos nuestros
-            servicios en el desarrollo de procesos de capacitación y formación con la finalidad de desarrollar y cualificar el
-            talento humano en las empresas públicas o privadas, con miras a facilitar la consecución de sus objetivos. Nuestra
-            experiencia en la gestión pública administrativa, en la defensa de los derechos e intereses de nuestros clientes
-            y en la gestión del conocimiento de las organizaciones, nos permite contar con los conocimientos para enfrentar la
-            incertidumbre, la complejidad creciente y los altos riesgos del mundo actual.
-        </p>
-    
+      <p [style.display]="!readmore ? 'none' : 'block'">
+        Igualmente, prestamos nuestros servicios en el desarrollo de procesos de capacitación y formación con la finalidad de desarrollar
+        y cualificar el talento humano en las empresas públicas o privadas, con miras a facilitar la consecución de sus objetivos.
+        Nuestra experiencia en la gestión pública administrativa, en la defensa de los derechos e intereses de nuestros clientes
+        y en la gestión del conocimiento de las organizaciones, nos permite contar con los conocimientos para enfrentar la
+        incertidumbre, la complejidad creciente y los altos riesgos del mundo actual.
+      </p>
 
-        <a (click)="readmore = !readmore" [textContent]="readmore ? 'leer menos...' : 'leer más...'"> &nbsp; leer más...</a>
-        
-        
+
+      <a (click)="readmore = !readmore" [textContent]="readmore ? 'leer menos...' : 'leer más...'"> &nbsp; leer más...</a>
+
+
 
 
       <br/>
       <br/>
       <div uk-grid class="uk-text-center">
-          <div class="uk-width-1-3@m"></div>
-          <div class="uk-width-1-3@m"><a style="font-size: 18px;" class="uk-button uk-button-text" routerLink="/portafolio">Portafolio de Servicios</a></div>
-          <div class="uk-width-1-3@m"></div>
+        <div class="uk-width-1-3@m"></div>
+        <div class="uk-width-1-3@m">
+          <a style="font-size: 18px;" class="uk-button uk-button-text" routerLink="/portafolio">Portafolio de Servicios</a>
+        </div>
+        <div class="uk-width-1-3@m"></div>
       </div>
     </div>
   </div>
@@ -102,13 +103,13 @@
       <div class="uk-margin-auto-vertical">
         <div id="asociadp_1"></div>
         <br/>
-        <p class="uk-button uk-button-text" routerLink="/asociados" style="font-size: 22; color: rgb(83, 83, 83); margin-top: 1em;" >Carlos Humberto Garcia Orrego</p>
+        <p class="uk-button uk-button-text" routerLink="/asociados" style="font-size: 22; color: rgb(83, 83, 83); margin-top: 1em;">Carlos Humberto Garcia Orrego</p>
         <hr style="width: 250px;" />
         <p>
           <i class="icon ion-ios-call"></i>&nbsp;&nbsp;&nbsp;(+57) 313 893-5855 </p>
-          <br/>
-          <p style="font-synthesis: 16px; margin-top: -1.5em;">
-          <i class="icon ion-md-mail" ></i>&nbsp;carloshgarciaorr@hotmail.com</p>
+        <br/>
+        <p style="font-synthesis: 16px; margin-top: -1.5em;">
+          <i class="icon ion-md-mail"></i>&nbsp;carloshgarciaorr@hotmail.com</p>
       </div>
 
 
@@ -138,26 +139,30 @@
   <div class="uk-width-expand@m" style="background-color: white;">
     <div style="padding: 5em;">
       <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Contacto</h1>
-     
+
       <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">dirección</h1>
-      <p style="font-size: 30px">
+      <p class="contact-items">
         Carrera 54D Número 135- 06
-        <br/> Torres Aqua Oficina 1004
+        <br/> Torres Acqua Oficina 1004
         <br/> Bogotá D.C.
       </p>
-      
+
       <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">celular</h1>
-      <p style="font-size: 30px">
-          (+57) 313 893-5855
+      <p class="contact-items">
+        (+57) 313 893-5855
       </p>
 
       <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">correo</h1>
-      <p style="font-size: 30px">
+      <div id="correo-home">
+        <p class="contact-items">
           carloshgarciaorr@hotmail.com
-      </p>
+        </p>
+      </div>
 
       <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">siguenos</h1>
-      <a href="https://www.instagram.com/g_lsas/" style="text-decoration: none; color: black;"><span uk-icon="icon: instagram; ratio: 2.5"></span></a>
+      <a href="https://www.instagram.com/g_lsas/" style="text-decoration: none; color: black;">
+        <span uk-icon="icon: instagram; ratio: 2.5"></span>
+      </a>
       <span> &nbsp; @g_lsas</span>
 
     </div>
