--- a/src/app/components/portafolio/portafolio.component.html
+++ b/src/app/components/portafolio/portafolio.component.html
@@ -1,12 +1,12 @@
 
-<div style="height: 100vh;;">
+<div style="height: 100vh;">
 
 
 <div uk-grid>
   <div class="uk-width-1-6@m"></div>
-  <div class="uk-width-expand@m" style="background-color: white; border-radius: 3em;" >
+  <div class="uk-width-expand@m" id="portafolio" >
     <div style="padding: 3em;">
-      <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Portafolio de Servicios</h1>
+      <h1 class="portafolio-title">Portafolio de Servicios</h1>
 
       <br/>
       <br/>
