--- a/src/app/components/social/social.component.html
+++ b/src/app/components/social/social.component.html
@@ -172,7 +172,7 @@
 
 
               <header class="uk-comment-header uk-grid-medium uk-flex-middle" uk-grid>
-                <div class="uk-width-auto">
+                <div class="uk-width-auto" class="social-seed-icon">
                   <img class="uk-comment-avatar" [src]="seed.author_image" width="80" height="80" alt="">
                 </div>
                 <div class="uk-width-expand">
