--- a/src/app/components/foro/foro.component.html
+++ b/src/app/components/foro/foro.component.html
@@ -228,7 +228,7 @@
             </div>
 
             <div *ngIf="!(publications | async)">
-              <h1 style=" font-family: 'Roboto'; font-size: 20px; font-weight: 300; color: rgba(167, 167, 167, 0.534);">Cragando...</h1>
+              <span style="background-color: rgba(255, 255, 255, 0)" class="uk-margin-left" uk-spinner="ratio: 4.5"></span>
             </div>
 
 
