--- a/src/app/components/social/social.component.html
+++ b/src/app/components/social/social.component.html
@@ -233,10 +233,10 @@
           </div>
 
 
-
+          
 
           <div *ngIf="!(seeds | async)">
-            Cargando...
+            <span style="background-color: rgba(255, 255, 255, 0)" class="uk-margin-left" uk-spinner="ratio: 4.5"></span>
           </div>
 
 
