--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
 
 
 <div uk-grid>
-  <div class="uk-width-1-6@m" style="background-color: white;"></div>
+  <div class="uk-width-1-6@m"  id="vision-side"></div>
   <div class="uk-width-1-3@m" id="vision-parent">
     <div id="vision">
       <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Visión</h1>
@@ -97,7 +97,7 @@
 <div uk-grid id="asociados">
   <div class="uk-width-expand@m"></div>
 
-  <div class="uk-width-1-3@m" style="background-color: white; border-radius: 3em 0em 0em 3em">
+  <div class="uk-width-1-3@m" id="asociados_card">
     <div style="padding: 5em 2.5em;">
       <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Asociados</h1>
       <div class="uk-margin-auto-vertical">
@@ -115,7 +115,7 @@
 
     </div>
   </div>
-  <div class="uk-width-1-6@m" style="background-color: white;"></div>
+  <div class="uk-width-1-6@m" id="asociados_side"></div>
 </div>
 
 
