--- a/src/app/components/foro/foro.component.html
+++ b/src/app/components/foro/foro.component.html
@@ -110,7 +110,7 @@
 
 
             <div class="uk-width-1-2@m" *ngFor="let pub of publications | async">
-              <div class="uk-card uk-card-default">
+              <div class="uk-card uk-card-default uk-card-hover">
 
 
                 <a routerLink="/foro/publicaciones/{{pub.id}}" style="text-decoration: none;">
