--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,66 +9,65 @@
 
 
 
+<!--SLIDE DE FOTOS-->
+
 <div uk-slider="center: true">
 
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
         <ul class="uk-slider-items uk-child-width-1-2@s uk-grid">
-            <li>
+            
+          <!--CADA li REPRESENTA UNA IMAGEN DEL SLIDE-->
+          
+          <!--IMAGEN 1-->
+          <li>
                 <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top">
+                      <!--CAMBIAR AQUI LA IMAGEN-->
                         <img src="https://getuikit.com/docs/images/light.jpg" alt="">
                     </div>
                     <div class="uk-card-body">
-                        <h3 class="uk-card-title">Headline</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                      <!--CAMBIAR AQUI TEXTO-->
+                        <h3 class="uk-card-title">ENCABEZADO.....</h3>
+                        <p>Descripción basica del evento....</p>
                     </div>
                 </div>
             </li>
+
+
+            <!--IMAGEN 2-->
             <li>
                 <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top">
+                      <!--CAMBIAR AQUI LA IMAGEN-->
                         <img src="https://getuikit.com/docs/images/photo2.jpg" alt="">
                     </div>
                     <div class="uk-card-body">
+                      <!--CAMBIAR AQUI TEXTO-->
                         <h3 class="uk-card-title">Headline</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                     </div>
                 </div>
             </li>
-            <li>
+
+            
+             <!--IMAGEN 3-->
+             <li>
                 <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top">
+                      <!--CAMBIAR AQUI LA IMAGEN-->
                         <img src="https://getuikit.com/docs/images/photo2.jpg" alt="">
                     </div>
                     <div class="uk-card-body">
+                      <!--CAMBIAR AQUI TEXTO-->
                         <h3 class="uk-card-title">Headline</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                     </div>
                 </div>
             </li>
-            <li>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                        <img src="https://getuikit.com/docs/images/photo2.jpg" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title">Headline</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                        <img src="https://getuikit.com/docs/images/photo2.jpg" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-card-title">Headline</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </li>
+
+
+
         </ul>
 
         <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
@@ -81,7 +80,7 @@
 </div>
 
 
-<!--SLIDE DE FOTOS-->
+<!-- fin SLIDE DE FOTOS-->
 
 
 
