--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,11 +23,11 @@
           <li>
                 <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top">
-                      <!--CAMBIAR AQUI LA IMAGEN-->
+                      <!--https://drive.google.com/file/d/1wGp7ZyvBaIB48p2nOjTv4KsVyasti3ML/view?usp=sharing-->
                         <img src="https://getuikit.com/docs/images/light.jpg" alt="">
                     </div>
                     <div class="uk-card-body">
-                      <!--CAMBIAR AQUI TEXTO-->
+                      <!--JORNADA-->
                         <h3 class="uk-card-title">ENCABEZADO.....</h3>
                         <p>Descripción basica del evento....</p>
                     </div>
