--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,7 +27,7 @@
                         <img src="https://getuikit.com/docs/images/light.jpg" alt="">
                     </div>
                     <div class="uk-card-body">
-                      <!--JORNADA-->
+                      <!--JORNADA DE ACTUALIZACION EN EL NUEVO CODIGO GENERAL DISCIPLINARIO-->
                         <h3 class="uk-card-title">ENCABEZADO.....</h3>
                         <p>Descripción basica del evento....</p>
                     </div>
