--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -96,6 +96,10 @@
           <a>Foro</a>
         </li>
 
+        <li routerLink="/eventos" href="#" uk-toggle="target: #offcanvas-nav-primary">
+          <a>Eventos</a>
+        </li>
+
         <li routerLink="/contacto" href="#" uk-toggle="target: #offcanvas-nav-primary">
           <a>Contacto</a>
         </li>
