--- a/src/app/components/portafolio/asociados/asociados.component.html
+++ b/src/app/components/portafolio/asociados/asociados.component.html
@@ -1,10 +1,6 @@
 <div style="min-height: 100vh;">
 
-
-
-  <div id="nbspasociados">
-    &nbsp;
-  </div>
+<br/>
 
 
 
@@ -83,9 +79,79 @@
 
 
 
-  <div id="nbspasociados">
+  <div>
     &nbsp;
+    <br/>
+    <br/>
   </div>
+
+
+
+  <div uk-grid>
+      <div class="uk-width-1-6@m"></div>
+      <div class="uk-width-expand@m" id="portafolio" style="margin-top: -5em;">
+        <div style="padding: 3em;">
+          <h1 class="portafolio-title">Asociados</h1>
+  
+  
+  
+          <div class="uk-panel">
+            <div class="uk-align-center uk-align-right@m uk-margin-remove-adjacent"  id="asociadp_2"></div>
+  
+            <br/>
+            <br/>
+            <h1 style=" font-family: 'Roboto'; font-size: 40px; font-weight: 400; color: rgb(43, 43, 43);">Adolfo José Mantilla Espinosa</h1>
+            <h1 style=" font-family: 'Roboto'; font-size: 20px; font-weight: 300; color: rgb(167, 167, 167); margin-top: -1em;">Socio</h1>
+  
+  
+          </div>
+ 
+          <ul class="uk-list uk-list-divider">
+            <li>
+              <p> Abogado de la Universidad Externado de Colombia.</p>
+            </li>
+            <li>
+              <p>Especialista en Derecho Público de la misma universidad.</p>
+            </li>
+            <li>
+              <p>Magister en Derecho Administrativo.</p>
+            </li>
+            <li>
+              <p>Diplomado en Derecho Tributario y Contratos Estatales de la Universidad del Rosario.</p>
+            </li>
+            <li>
+              <p>Diplomado en Derecho Disciplinario Ley 734 de 2002.</p>
+            </li>
+            <li>
+              <p>Procuraduría General de la Nación - Instituto de Estudios del Ministerio Público.</p>
+            </li>
+            <li>
+              <p>Con experiencia de 23 años en Derecho Disciplinario y Contratación Estatal.</p>
+            </li>
+            <li>
+              <p>Docente universitario a nivel de Postgrado (Universidad Libre, Militar Nueva Granada, Santo
+                  Tomas de Aquino, Rosario, Sergio Arboleda, Universidad de Medellín, e Instituto de
+                  Estudios del Ministerio Público de la Procuraduría General de la Nación)</p>
+            </li>
+            <li>
+                <p>Magíster en Derecho Administrativo con la defensa del trabajo “El ejercicio de la exorbitancia en la
+                    Universidad Pública”, premiado por el Instituto de Estudios del Ministerio Público en
+                    octubre de 2013 con la condecoración “Mérito a la Excelencia Académica: mejor
+                    docente externo”, en la actualidad asesor de algunas entidades del orden nacional y
+                    territorial.</p>
+              </li>
+            
+  
+          </ul>
+  
+  
+  
+  
+        </div>
+      </div>
+      <div class="uk-width-1-6@m"></div>
+    </div>
+  
 
 
   <div id="nbspasociados">
