--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,74 +11,89 @@
 
 <!--SLIDE DE FOTOS-->
 
-<div uk-slider="center: true">
-
+<div class="uk-width-1-1">
+  <div style="padding-top: 3em;" uk-slider="center: true">
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
-
-        <ul class="uk-slider-items uk-child-width-1-2@s uk-grid">
-            
-          <!--CADA li REPRESENTA UNA IMAGEN DEL SLIDE-->
-          
-          <!--IMAGEN 1-->
-          <li>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                      <!--CAMBIAR AQUI LA IMAGEN-->
-                        <img src="https://getuikit.com/docs/images/light.jpg" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                      <!--CAMBIAR AQUI TEXTO-->
-                        <h3 class="uk-card-title">ENCABEZADO.....</h3>
-                        <p>Descripción basica del evento....</p>
-                    </div>
-                </div>
-            </li>
+      <ul class="uk-slider-items uk-child-width-1-2@s uk-grid">
 
 
-            <!--IMAGEN 2-->
-            <li>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                      <!--CAMBIAR AQUI LA IMAGEN-->
-                        <img src="https://getuikit.com/docs/images/photo2.jpg" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                      <!--CAMBIAR AQUI TEXTO-->
-                        <h3 class="uk-card-title">Headline</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </li>
-
-            
-             <!--IMAGEN 3-->
-             <li>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                      <!--CAMBIAR AQUI LA IMAGEN-->
-                        <img src="https://getuikit.com/docs/images/photo2.jpg" alt="">
-                    </div>
-                    <div class="uk-card-body">
-                      <!--CAMBIAR AQUI TEXTO-->
-                        <h3 class="uk-card-title">Headline</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    </div>
-                </div>
-            </li>
+        <li>
+          <div class="uk-card uk-card-default" style="border-radius: 3em;">
+            <div class="uk-card-media-top">
+              <img style="border-radius: 3em 3em 0em 0em;" src="assets/eventos/ley1952.png" alt="">
+            </div>
+            <div class="uk-card-body">
+              <h3 class="uk-card-title">
+                Jornada de actualización en el nuevo código general disciplinario <br />Ley 1952 de 2019
+              </h3>
+              <p>
+                <strong>Lugar</strong> Hotel Cosmos Salón Finestra Av Calle 116 No. 18-60 <br />
+                <strong>Fecha</strong> 21 y 22 de marzo 2019 <br />
+                Descuento del 10% para egresados y estudiantes Universidad Libre <br />
+                <br /><strong><a routerLink="/eventos" style="color: rgb(114, 114, 114)">Más Información
+                    Aquí</a></strong><br />
+              </p>
+            </div>
+          </div>
+        </li>
 
 
+        <li>
+          <div class="uk-card uk-card-default" style="border-radius: 3em;">
+            <div class="uk-card-media-top">
+              <img style="border-radius: 3em 3em 0em 0em;" src="https://getuikit.com/docs/images/photo.jpg" alt="">
+            </div>
+            <div class="uk-card-body">
+              <h3 class="uk-card-title">Headline</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="uk-card uk-card-default" style="border-radius: 3em;">
+            <div class="uk-card-media-top">
+              <img style="border-radius: 3em 3em 0em 0em;" src="https://getuikit.com/docs/images/photo.jpg" alt="">
+            </div>
+            <div class="uk-card-body">
+              <h3 class="uk-card-title">Headline</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="uk-card uk-card-default" style="border-radius: 3em;">
+            <div class="uk-card-media-top">
+              <img style="border-radius: 3em 3em 0em 0em;" src="https://getuikit.com/docs/images/photo.jpg" alt="">
+            </div>
+            <div class="uk-card-body">
+              <h3 class="uk-card-title">Headline</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="uk-card uk-card-default" style="border-radius: 3em;">
+            <div class="uk-card-media-top">
+              <img style="border-radius: 3em 3em 0em 0em;" src="https://getuikit.com/docs/images/photo.jpg" alt="">
+            </div>
+            <div class="uk-card-body">
+              <h3 class="uk-card-title">Headline</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            </div>
+          </div>
+        </li>
 
-        </ul>
 
-        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+      </ul>
 
+      <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+        uk-slider-item="previous"></a>
+      <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+        uk-slider-item="next"></a>
     </div>
-
     <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
-
+  </div>
 </div>
-
 
 <!-- fin SLIDE DE FOTOS-->
 
@@ -95,19 +110,21 @@
 
 <!--PAGINA PRINCIPAL-->
 
-<div id="nbsp">
+<div id="nbsp-inline">
   &nbsp;
 </div>
 
 
 <div uk-grid>
-  <div class="uk-width-1-6@m"  id="vision-side"></div>
+  <div class="uk-width-1-6@m" id="vision-side"></div>
   <div class="uk-width-1-3@m" id="vision-parent">
     <div id="vision">
       <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Visión</h1>
       <p>
-        Consolidarnos en el 2020 como una empresa referente en el mercado en los servicios que presta, que aplica los sistemas de
-        calidad en la prestación de sus servicios, que genera trabajo digno y estable para sus empleados y que mejora continuamente
+        Consolidarnos en el 2020 como una empresa referente en el mercado en los servicios que presta, que aplica los
+        sistemas de
+        calidad en la prestación de sus servicios, que genera trabajo digno y estable para sus empleados y que mejora
+        continuamente
         con la retroalimentación de cada uno de nuestros clientes.
       </p>
     </div>
@@ -131,34 +148,43 @@
     <div id="mision">
       <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Misión</h1>
       <p>
-        Somos una empresa experta en servicios legales, de formación y capacitación, dedicada a proveer soluciones ajustadas a las
+        Somos una empresa experta en servicios legales, de formación y capacitación, dedicada a proveer soluciones
+        ajustadas a las
         necesidades propias de cada cliente u organización, generando valor agregado en cada una de nuestras actuaciones
         lo cual permite el logro de los objetivos de nuestros clientes. Nuestros servicios se enfocan a la prestación de
-        servicios profesionales o de consultoría en asesoría legal en el campo del derecho público y privado, así como en
-        el ejercicio de la representación legal y/o la defensa jurídica de personas naturales o jurídicas, nacionales o extranjeras
+        servicios profesionales o de consultoría en asesoría legal en el campo del derecho público y privado, así como
+        en
+        el ejercicio de la representación legal y/o la defensa jurídica de personas naturales o jurídicas, nacionales o
+        extranjeras
         ante las autoridades judiciales o administrativas a nivel nacional o internacional.
       </p>
 
       <p [style.display]="!readmore ? 'none' : 'block'">
-        Igualmente, prestamos nuestros servicios en el desarrollo de procesos de capacitación y formación con la finalidad de desarrollar
-        y cualificar el talento humano en las empresas públicas o privadas, con miras a facilitar la consecución de sus objetivos.
-        Nuestra experiencia en la gestión pública administrativa, en la defensa de los derechos e intereses de nuestros clientes
-        y en la gestión del conocimiento de las organizaciones, nos permite contar con los conocimientos para enfrentar la
+        Igualmente, prestamos nuestros servicios en el desarrollo de procesos de capacitación y formación con la
+        finalidad de desarrollar
+        y cualificar el talento humano en las empresas públicas o privadas, con miras a facilitar la consecución de sus
+        objetivos.
+        Nuestra experiencia en la gestión pública administrativa, en la defensa de los derechos e intereses de nuestros
+        clientes
+        y en la gestión del conocimiento de las organizaciones, nos permite contar con los conocimientos para enfrentar
+        la
         incertidumbre, la complejidad creciente y los altos riesgos del mundo actual.
       </p>
 
 
-      <a (click)="readmore = !readmore" [textContent]="readmore ? 'leer menos...' : 'leer más...'"> &nbsp; leer más...</a>
+      <a (click)="readmore = !readmore" [textContent]="readmore ? 'leer menos...' : 'leer más...'"> &nbsp; leer
+        más...</a>
 
 
 
 
-      <br/>
-      <br/>
+      <br />
+      <br />
       <div uk-grid class="uk-text-center">
         <div class="uk-width-1-3@m"></div>
         <div class="uk-width-1-3@m">
-          <a style="font-size: 18px;" class="uk-button uk-button-text" routerLink="/portafolio">Portafolio de Servicios</a>
+          <a style="font-size: 18px;" class="uk-button uk-button-text" routerLink="/portafolio">Portafolio de
+            Servicios</a>
         </div>
         <div class="uk-width-1-3@m"></div>
       </div>
@@ -171,7 +197,7 @@
 
 
 
-
+<!---->
 
 <div id="nbsp-inline">
   &nbsp;
@@ -183,19 +209,21 @@
 
   <div class="uk-width-1-3@m" id="asociados_card">
     <div style="padding: 5em 2.5em;">
-      <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Asociados</h1>
+      <h1 routerLink="/asociados"
+        style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Asociados</h1>
+
       <div class="uk-margin-auto-vertical">
         <div id="asociadp_1"></div>
-        <br/>
-        <p class="uk-button uk-button-text" routerLink="/asociados" style="font-size: 22; color: rgb(83, 83, 83); margin-top: 1em;">Carlos Humberto Garcia Orrego</p>
+        <br />
+        <p class="uk-button uk-button-text" routerLink="/asociados"
+          style="font-size: 22; color: rgb(83, 83, 83); margin-top: 1em;">Carlos Humberto Garcia Orrego</p>
         <hr style="width: 250px;" />
         <p>
           <i class="icon ion-ios-call"></i>&nbsp;&nbsp;&nbsp;(+57) 313 893-5855 </p>
-        <br/>
+        <br />
         <p style="font-synthesis: 16px; margin-top: -1.5em;">
           <i class="icon ion-md-mail"></i>&nbsp;carloshgarciaorr@hotmail.com</p>
       </div>
-
 
     </div>
   </div>
@@ -214,8 +242,8 @@
   &nbsp;
 </div>
 
-<br/>
-<br/>
+<br />
+<br />
 
 
 
@@ -226,9 +254,9 @@
 
       <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">dirección</h1>
       <p class="contact-items">
-        Carrera 54D Número 135- 06
-        <br/> Torres Acqua Oficina 1004
-        <br/> Bogotá D.C.
+        Carrera 54D Número 135-06
+        <br /> Torres Acqua Oficina 1004
+        <br /> Bogotá D.C.
       </p>
 
       <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">celular</h1>
@@ -247,8 +275,42 @@
       <a href="https://www.instagram.com/g_lsas/" style="text-decoration: none; color: black;">
         <span uk-icon="icon: instagram; ratio: 2.5"></span>
       </a>
-      <span> &nbsp; @g_lsas</span>
+      <span > &nbsp;  <a href="https://www.instagram.com/g_lsas/">@g_lsas</a></span>
 
     </div>
   </div>
+
+
+
+  <div class="uk-width-expand@m" style="background-color: white;">
+    <div style="padding: 5em;">
+      <h1 style=" font-family: 'Roboto'; font-size: 60px; font-weight: 300; color: rgb(167, 167, 167);">Mapa del Sitio
+      </h1>
+
+      <h1 style=" font-family: 'Roboto'; font-size: 16px; font-weight: 300; color: rgb(167, 167, 167);">Menú</h1>
+
+      <p routerLink="/portafolio">
+        Portafolio de Servicios
+      </p>
+
+      <p routerLink="/asociados">
+        Asociados
+      </p>
+
+      <p routerLink="/social">
+        Blog
+      </p>
+
+      <p routerLink="/foro">
+        Foro
+      </p>
+
+      <p routerLink="/eventos">
+        Eventos
+      </p>
+
+    </div>
+  </div>
+
+
 </div>
