router en imagen de eventos

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
         <li>
           <div class="uk-card uk-card-default" style="border-radius: 3em;">
             <div class="uk-card-media-top">
-              <img style="border-radius: 3em 3em 0em 0em;" src="assets/eventos/ley1952.png" alt="">
+              <img routerLink="/eventos" style="border-radius: 3em 3em 0em 0em;" src="assets/eventos/ley1952.png" alt="">
             </div>
             <div class="uk-card-body">
               <h3 class="uk-card-title">
